bugfix(carousel-slide): fixed image collapse when info block is too large

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ section#slider {
     justify-content: center;
     font-size: 1.2em;
     padding-top: 50px;
+    min-height: 400px;
 }
 
 .no-attach {
@@ -110,6 +111,7 @@ section#slider {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 400px;
 }
 
 .no-attach-content {
@@ -191,6 +193,7 @@ section#slider {
     width: calc(100vw - 40px);
     display: flex;
     justify-content: center;
+    min-height: 400px;
 }
 
 .carousel-slide img {
